--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="backdrop"></div>
+    <div id="popUp"></div>
     <div id="root"></div>
   </body>
 </html>
